# user_management_system

./: Makefile  README.md  pyproject.toml  pytest.ini
authentication/: serializers.py  urls.py  views.py
tests/: test_authentication.py  test_users.py
user_management_system/: asgi.py  backends.py  settings.py  urls.py  wsgi.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_address_customuser_phone_number.py
